--- a/src/SidebarChat.css
+++ b/src/SidebarChat.css
@@ -1,19 +1,24 @@
 .sidebarChat {
-    display: flex;
-    padding: 20px;
-    cursor: pointer;
-    border-bottom: 1px solid #f6f6f6;
+  display: flex;
+  padding: 9px;
+  cursor: pointer;
+  border-bottom: 1px solid #f6f6f6;
 }
 
 .sidebarChat:hover {
-    background-color: #f6f6f6;
+  background-color: #f6f6f6;
 }
 
 .sidebarChat__info > h2 {
-    font-size: 16px;
-    margin-bottom: 8px;
+  font-size: 16px;
+  margin-bottom: 8px;
 }
 
 .sidebarChat__info {
-    margin-left: 15px;
+  margin-left: 15px;
+}
+
+.sidebarChat__info > p {
+  font-size: 12px;
+  color: #8c8c8c;
 }
