--- a/src/Chat.css
+++ b/src/Chat.css
@@ -52,6 +52,27 @@
   margin-bottom: 30px;
 }
 
+.chat__image {
+  width: 500px;
+  max-height: 300px;
+  cursor: pointer;
+  display: flex;
+  position: relative;
+
+  padding: 0px;
+  background-color: rgba(255, 255, 255, 0.13);
+  border-radius: 10px;
+
+  margin-bottom: 30px;
+}
+
+.img {
+  width: 100%;
+  height: "300px";
+  object-fit: cover;
+  cursor: pointer;
+}
+
 .chat__name {
   font-size: 13px;
   font-weight: bold;
