--- a/src/Chat.css
+++ b/src/Chat.css
@@ -57,6 +57,8 @@
   max-height: 300px;
   cursor: pointer;
   display: flex;
+  justify-content: center;
+  align-items: center;
   position: relative;
 
   padding: 0px;
@@ -68,9 +70,22 @@
 
 .img {
   width: 100%;
-  height: "300px";
+  height: 300px;
   object-fit: cover;
   cursor: pointer;
+}
+
+#buttom {
+  margin-left: 20px;
+  padding: 10px;
+  background-color: #efd056;
+  border-radius: 10%;
+  color: rgb(100, 100, 100);
+}
+
+#buttom:hover {
+  background-color: #f1d564;
+  color: #fff;
 }
 
 .chat__name {
